--- a/resume-blue.html
+++ b/resume-blue.html
@@ -14,10 +14,10 @@
 <img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  someone@email.com <br> mobile: +852 xxxxxxxx <br> Nationality: Chinese
+  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Adresse: 22 rue Mouzaoui Abdelaziz, Alger
 </span>
 
-# Casualwriter  
+# BOUSMINA Lazhar  
 
 ## Executive Summary
 
