--- a/resume-blue.html
+++ b/resume-blue.html
@@ -19,12 +19,15 @@
 
 # BOUSMINA Lazhar  
 
-## Executive Summary
+## COMPÉTENCES
 
-* 10 years project/team management experience
-* PMP, OCP, AWS Certification
-* Hand-on experience in oracle database
-* Proficient in JavaScript, Java, Powerbuilder
++ Installation, administration d’un environnement Windows Server (2008-2022)
++ Mise en place d’un serveur de deploiement Windows
+* Création et Gestion des stratégies de groupes GPO
+* Gestion des Contrôleur de domaine, Serveurs
+* Configuration d’un cluster de basculement Windows
+* Implémentation d’une infrastructure à clés publique AD CS.
+* Automatisation des tâches d’administration avec Powershell
 
 ## Working Experience
 
