--- a/resume-blue.html
+++ b/resume-blue.html
@@ -20,7 +20,7 @@
 # BOUSMINA Lazhar  
 
 ## COMPÉTENCES
-
+### Windows
 + Installation, administration d’un environnement Windows Server (2008-2022)
 + Mise en place d’un serveur de deploiement Windows
 * Création et Gestion des stratégies de groupes GPO
