--- a/resume-blue.html
+++ b/resume-blue.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Resume</title>
+<title>Curriculum Vitae BOUSMINA Lazhar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
@@ -20,7 +20,9 @@
 # BOUSMINA Lazhar  
 
 ## COMPÉTENCES
+  
 ### Windows
+  
 + Installation, administration d’un environnement Windows Server (2008-2022)
 + Mise en place d’un serveur de deploiement Windows
 * Création et Gestion des stratégies de groupes GPO
