--- a/resume-blue.html
+++ b/resume-blue.html
@@ -14,7 +14,7 @@
 <img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975
+  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue mouzaoui Abdelaziz Alger
 </span>
 
 # BOUSMINA Lazhar  
