--- a/resume-blue.html
+++ b/resume-blue.html
@@ -5,8 +5,8 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
-  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:BLACK }
-  h2  { border-bottom:1px solid grey; padding:2px; COLOR:STEELBLUE }
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
+  h2  { border-bottom:1px solid grey; padding:2px; COLOR:rgb(12, 39, 61) }
   h3  { border-bottom:1px solid grey; padding:2px; COLOR:STEELBLUE }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
