--- a/resume-blue.html
+++ b/resume-blue.html
@@ -32,6 +32,12 @@
 * Implémentation d’une infrastructure à clés publique AD CS.
 * Automatisation des tâches d’administration avec Powershell
 
+### Réseaux
+* Configuration des réseaux LAN, WAN.
+* Configuration et dépannage des protocoles réseaux.
+* Configuration routeurs et switches L2 et L3.
+* Configuration et administration des pare-feux.
+  
 ## Working Experience
 
 #### Current Company (Project Manager, 2015/08 - present) 
