--- a/resume-blue.html
+++ b/resume-blue.html
@@ -18,7 +18,7 @@
   nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue mouzaoui Abdelaziz Alger
 </span>
 
-# BOUSMINA Lazhar  
+# BOUSMINA Lazhar (Administrateur Système et réseaux) 
 
 ## COMPÉTENCES
   
