--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,8 @@
   nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue mouzaoui Abdelaziz Alger
 </span>
 
-# BOUSMINA Lazhar  
-(Administrateur Système et réseaux)
+# BOUSMINA Lazhar <br> (Administrateur Système et réseaux)
+
 ## COMPÉTENCES
   
 ### Windows
