--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
   h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
   h2  { border-bottom:1px solid grey; padding:2px; COLOR:STEELBLUE }
-  h3  { COLOR:STEELBLUE }
+  h3  { COLOR:STEELBLUE; border-bottom:none;}
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
 <!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH RESUME CONTENT IN MARKDOWN FORMAT =========-->
