--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,8 @@
   
 ### Windows
   
-+ Installation, administration d’un environnement Windows Server (2008-2022)
+* Mise en place, administration et maintenance d’une infrastructure Active Directory dans des environnements Windows Server (2008 à 2022)
 + Mise en place d’un serveur de deploiement Windows
-* Création et Gestion des stratégies de groupes GPO
 * Gestion des Contrôleur de domaine, Serveurs
 * Configuration d’un cluster de basculement Windows
 * Implémentation d’une infrastructure à clés publique AD CS.
