--- a/resume.html
+++ b/resume.html
@@ -15,22 +15,29 @@
 <img style="float:right;border-radius:50%;width:150px;padding:6px" src="pic.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue mouzaoui Abdelaziz Alger
+  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue Mouzaoui Abdelaziz, Alger
 </span>
 
-# BOUSMINA Lazhar <br> (Administrateur Système et réseaux)
+# BOUSMINA Lazhar <br> (Administrateur système)
 
 ## Compétences Techniques
   
 ### Windows
   
-* Mise en place, administration et maintenance d’une infrastructure Active Directory dans des environnements Windows Server (2008 à 2022)
+* Mise en place, administration et maintenance d’une infrastructure Active Directory dans des environnements Windows Server (2008 à 2025)
 + Mise en place d’un serveur de deploiement Windows
 * Gestion des Contrôleur de domaine, Serveurs
 * Configuration d’un cluster de basculement Windows
-* Implémentation d’une infrastructure à clés publique AD CS.
-* Automatisation des tâches d’administration avec Powershell
-
+  
+### Virtualisation:
+  
+* Installation et configuration d’un hyperviseur: Hyper-V, vSphere Vcenter et Proxmox.
+* Configuration du stockage réseau de type NAS et SAN.
+  
+### Linux:
+  
+* Installation, administration des serveurs Linux : Redhat et Debian
+  
 ### Réseaux
 * Configuration des réseaux LAN, WAN.
 * Configuration et dépannage des protocoles réseaux.
