Update heading format for SOGRAL EPE/SPA experience

--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
 * Configuration et administration des pare-feux.
 
 ## Expérience professionnelle:
-### SOGRAL EPE/SPA (Chef de projet sécurité informatique, mars 2023 à ce jour)
+#### SOGRAL EPE/SPA (Chef de projet sécurité informatique, mars 2023 à ce jour)
 * Gestion des sauvegardes des serveurs avec VEEAM Backup and Replication.
 * Configuration des pares-feu FORTIGATE.
 * Configuration et administration des serveurs web et proxy.
