Revise professional experience section in resume
Updated the working experience section to reflect current role and responsibilities, and translated section titles to French.

--- a/resume.html
+++ b/resume.html
@@ -45,6 +45,7 @@
 * Configuration et administration des pare-feux.
 
 ## Expérience professionnelle:
+  
 #### SOGRAL EPE/SPA (Chef de projet sécurité informatique, mars 2023 à ce jour)
 * Gestion des sauvegardes des serveurs avec VEEAM Backup and Replication.
 * Configuration des pares-feu FORTIGATE.
@@ -87,7 +88,7 @@ EL Hamiz, Alger
 — Gestionnaire de stock.
 DIPLÔME FORMATIONS ET ATTESTATIONS
   
-## Working Experience
+## Expérience professionnelle
 
 #### Current Company (Project Manager, 2015/08 - present) 
 
