--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 * Installation et configuration de la solution anti-virus ESET Endpoint Security.
 * Installation et configuration d’une baie de stockage HPE MSA2062.
 
-### SOGRAL EPE/SPA (Administrateur système & réseaux, oct 2018 à mars 2023)
+###{ SOGRAL EPE/SPA (Administrateur système & réseaux, oct 2018 à mars 2023)
 * Administration du domaine Windows Server : active directory, GPO.
 * Administration de l’hyperviseur vCenter / ESXI et des machines virtuelles.
 * Mise en place d’un serveur FTP : ProFTPD
@@ -62,31 +62,16 @@
 * Mis en place d’un serveur de ticketing/IT Assets Management : GLPI
 * Formation des nouveaux recrues
 * IT support niveau 2.
-Informaticien réseau / système
-Avril 2013 — Mars 2015
-Zeta Technologies
-Bab Ezzouar, Alger
+  
+#### ZETA TECHNOLOGIES (Informaticien réseau et système, avr 2013 à 2015)
 * Installation réseau et configuration serveurs et postes clients.
 * Gestion des serveurs : ILO, iDRAC, Firmware, disques et contrôleur Raid...
 * Configuration des équipements réseau : switch L2/L3, routeurs et pare-feux.
-Agent administratif
-avril 2007 — dec 2013
-INSFP Beaulieu
-Oued Smar, Alger
-— Agent d’administration.
-Installateur réseaux / maintenance informatique
-2005 — 2006
-Magasin
-Alger
-— Montage PC, maintenance hardware et software.
-— Installation réseaux informatiques.
-— Configuration serveurs et des postes clients.
-Gestion de stock
-2001 — 2004
-Importateur
-EL Hamiz, Alger
-— Gestionnaire de stock.
-DIPLÔME FORMATIONS ET ATTESTATIONS
+
+#### INSFP Beaulieu (Agent administratif, avril 2007 à dec 2012)
+* Agent d’administration.
+
+## DIPLÔME FORMATIONS ET ATTESTATIONS
   
 ## Expérience professionnelle
 
