Fix header formatting in resume.html

--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 * Installation et configuration de la solution anti-virus ESET Endpoint Security.
 * Installation et configuration d’une baie de stockage HPE MSA2062.
 
-###{ SOGRAL EPE/SPA (Administrateur système & réseaux, oct 2018 à mars 2023)
+#### SOGRAL EPE/SPA (Administrateur système & réseaux, oct 2018 à mars 2023)
 * Administration du domaine Windows Server : active directory, GPO.
 * Administration de l’hyperviseur vCenter / ESXI et des machines virtuelles.
 * Mise en place d’un serveur FTP : ProFTPD
