Revise job titles and employment dates in resume
Updated job titles and dates for clarity and consistency.

--- a/resume.html
+++ b/resume.html
@@ -46,14 +46,14 @@
 
 ## Expérience professionnelle:
   
-#### SOGRAL EPE/SPA (Chef de projet sécurité informatique, mars 2023 à ce jour)
+#### SOGRAL EPE/SPA (Chef de projet sécurité informatique, 03/2023 à ce jour)
 * Gestion des sauvegardes des serveurs avec VEEAM Backup and Replication.
 * Configuration des pares-feu FORTIGATE.
 * Configuration et administration des serveurs web et proxy.
 * Installation et configuration de la solution anti-virus ESET Endpoint Security.
 * Installation et configuration d’une baie de stockage HPE MSA2062.
 
-#### SOGRAL EPE/SPA (Administrateur système & réseaux, oct 2018 à mars 2023)
+#### SOGRAL EPE/SPA (Administrateur système & réseaux, 10/2018 à 03/2023)
 * Administration du domaine Windows Server : active directory, GPO.
 * Administration de l’hyperviseur vCenter / ESXI et des machines virtuelles.
 * Mise en place d’un serveur FTP : ProFTPD
@@ -63,12 +63,12 @@
 * Formation des nouveaux recrues
 * IT support niveau 2.
   
-#### ZETA TECHNOLOGIES (Informaticien réseau et système, avr 2013 à 2015)
+#### ZETA TECHNOLOGIES (Informaticien réseau et système, 06/2013 à 09/2015)
 * Installation réseau et configuration serveurs et postes clients.
 * Gestion des serveurs : ILO, iDRAC, Firmware, disques et contrôleur Raid...
 * Configuration des équipements réseau : switch L2/L3, routeurs et pare-feux.
 
-#### INSFP Beaulieu (Agent administratif, avril 2007 à dec 2012)
+#### INSFP Beaulieu (Agent administratif, 01/2007 à 12/2012)
 * Agent d’administration.
   
 ## Projects
