--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <img style="float:right;border-radius:50%;width:120px;padding:6px" src="pic.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue Mouzaoui Abdelaziz, Alger
+  nolondil@gmail.com <br> mobile: 0557 435 213 <br> Date de naissance: 10 octobre 1975 <br> Adresse: 22 rue Mouzaoui Abdelaziz, Alger <br>
 </span>
 
 # BOUSMINA Lazhar <br> (Administrateur système)
