Update education and qualifications section
Added educational qualifications and certifications.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 #### INSFP Beaulieu (Agent administratif, 01/2007 à 12/2012)
 * Agent d’administration.
+
   
 ## Projects
 
@@ -77,12 +78,27 @@
 * [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
 
 ## Education & Qualifications
-
-* AWS Certification (2021/12)
-* Oracle Certified Professional (2020/02)
-* Project Management Professional (PMP) (2018/10)
-* Bachelor of Computer Science (Sep 2004)
-* The Chinese University of Hong Kong (2000 - 2004)
+* Formation RSSI : Maitriser et incarner les fonctions SSI, UNIDEES Mai 2023
+* CompTIA Storage+, Cetic
+Dec 2021
+* CompTIA Security+ SYO-501, Cetic
+Dec 2020
+* Certification Cisco CCNA 200-301, ICT Tower
+Jan 2020
+* Crash course CCNA, ICT Tower
+Dec 2019
+* VMware vSphere : Install, Configure, Manage V6.7, IT Talents
+Dec 2019
+* Implémentation d’une infrastructure de serveur avancé, It Talents
+Dec 2019
+* FortiGate Infrastructure, Cetic
+Mar 2019
+* Configuration des services avancés de Windows Server 2012, Cetic
+Nov 2018
+* Administration RedHat Entreprise Linux 5, Cetic
+2008
+* Diplôme TS en informatique, option bases de données, Institut Abelkader Mettouk, El harrach
+sept 2015
 
 ## Misc. Information
 
