Revise qualifications and project details in index.html
Updated project descriptions and qualifications with more details and formatted the education section. Changed section titles to French.

--- a/index.html
+++ b/index.html
@@ -69,38 +69,34 @@
 * Configuration des équipements réseau : switch L2/L3, routeurs et pare-feux.
 
 #### INSFP Beaulieu (Agent administratif, 01/2007 à 12/2012)
-* Agent d’administration.
 
   
-## Projects
+## Projets
 
-* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
-* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
+* Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
+* Implémentation d’un serveur de ticketing et d’asset management (GLPI)
+* Déploiement d’un serveur de moniotirng et de surveillance l’ensemble de l’infrastruction IT et d’envoyer des alertes (Zabbix + Grafana)
+* Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
+* Configuration et administration d’une solution de sauvegarde (Veeam Backup & replication)
+* Mise en place d’un reverse proxy en mode terminaison TLS (HAProxy)
+* Installation et administration d’une plateforme de réservation en ligne (MAHATATI)
+* Configuration d'un cluster de virtualisation (vCenter)
+  
+## Diplômes et formations
 
-## Education & Qualifications
-* Formation RSSI : Maitriser et incarner les fonctions SSI, UNIDEES Mai 2023
-* CompTIA Storage+, Cetic
-Dec 2021
-* CompTIA Security+ SYO-501, Cetic
-Dec 2020
-* Certification Cisco CCNA 200-301, ICT Tower
-Jan 2020
-* Crash course CCNA, ICT Tower
-Dec 2019
-* VMware vSphere : Install, Configure, Manage V6.7, IT Talents
-Dec 2019
-* Implémentation d’une infrastructure de serveur avancé, It Talents
-Dec 2019
-* FortiGate Infrastructure, Cetic
-Mar 2019
-* Configuration des services avancés de Windows Server 2012, Cetic
-Nov 2018
-* Administration RedHat Entreprise Linux 5, Cetic
-2008
-* Diplôme TS en informatique, option bases de données, Institut Abelkader Mettouk, El harrach
-sept 2015
+* Formation RSSI : Maitriser et incarner les fonctions SSI, UNIDEES (05/2023)
+* CompTIA Storage+ (12/2021)
+* CompTIA Security+ SYO-501 (12/2020)
+* Certification Cisco CCNA 200-301 (01/2020)
+* Crash course CCNA (12/2019)
+* VMware vSphere : Install, Configure, Manage V6.7 (12/2019)
+* Implémentation d’une infrastructure de serveur avancé (12/2019)
+* FortiGate Infrastructure (03/2019)
+* Configuration des services avancés de Windows Server 2012 (11/2018)
+* Administration RedHat Entreprise Linux 5 (2009)
+* Diplôme TS en informatique, option bases de données (09/2015)
 
 ## Misc. Information
 
-* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
-* Availability: 1 month's notice
+* Langues: Anglais (bon), Français (bon), Arabe (bon)
+* Disponibilité: 1 mois
