Fix typos and enhance project descriptions in index.html
Corrected typos and improved clarity in project descriptions.

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
 * Implémentation d’un serveur de ticketing et d’asset management (GLPI)
-* Déploiement d’un serveur de moniotirng et de surveillance l’ensemble de l’infrastruction IT et d’envoyer des alertes (Zabbix + Grafana)
+* Déploiement d’un serveur de monitoring de l’infrastruction IT (Zabbix + Grafana)
 * Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
-* Configuration et administration d’une solution de sauvegarde (Veeam Backup & replication)
+* Configuration et administration d’une solution de sauvegarde des serveurs et VMs (Veeam Backup & replication)
 * Mise en place d’un reverse proxy en mode terminaison TLS (HAProxy)
 * Installation et administration d’une plateforme de réservation en ligne (MAHATATI)
-* Configuration d'un cluster de virtualisation (vCenter)
+* Configuration d'un cluster de serveurs de virtualisation (vCenter)
   
 ## Diplômes et formations
 
-* Formation RSSI : Maitriser et incarner les fonctions SSI, UNIDEES (05/2023)
+* Formation RSSI : Maîtriser et incarner les fonctions SSI, UNIDEES (05/2023)
 * CompTIA Storage+ (12/2021)
 * CompTIA Security+ SYO-501 (12/2020)
 * Certification Cisco CCNA 200-301 (01/2020)
