Update project description for GLPI server

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 ## Projets
 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
-* Implémentation d’un serveur de ticketing et d’asset management (GLPI)
+* Implémentation d’un serveur de ticketing et d’inventaire d'équipements IT (GLPI)
 * Déploiement d’un serveur de monitoring de l’infrastruction IT (Zabbix + Grafana)
 * Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
 * Configuration et administration d’une solution de sauvegarde des serveurs et VMs (Veeam Backup & replication)
