Update project list in index.html
Added ongoing VMware vCenter migration and DHCP server setup.

--- a/index.html
+++ b/index.html
@@ -72,15 +72,17 @@
 
   
 ## Projets
-
+  
+* Migration de VMware vCenter vers Proxmox VE (en cours) 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
 * Implémentation d’un serveur de ticketing et d’inventaire d'équipements IT (GLPI)
 * Déploiement d’un serveur de monitoring de l’infrastruction IT (Zabbix + Grafana)
 * Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
 * Configuration et administration d’une solution de sauvegarde des serveurs et VMs (Veeam Backup & replication)
 * Mise en place d’un reverse proxy en mode terminaison TLS (HAProxy)
-* Installation et administration d’une plateforme de réservation en ligne (MAHATATI)
+* Installation et administration d’une plateforme de réservation en ligne (MAHATATI)  
 * Configuration d'un cluster de serveurs de virtualisation (vCenter)
+* Mise en place d'un serveur DHCP et configuration VLANs
   
 ## Diplômes et formations
 
