Add profile and technical skills section
Added a new section for profile and technical skills.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 # BOUSMINA Lazhar <br> (Administrateur système)
 
+## Profil
+Chef de projet sécurité informatique avec plus de 10 ans d’expérience en administration systèmes, réseaux et virtualisation. Spécialisé dans la sécurisation des infrastructures IT, la gestion de projets techniques et la mise en œuvre de solutions VMware et Fortinet.
+
 ## Compétences Techniques
   
 ### Windows
