Refine content in index.html for clarity
Updated various sections for clarity and consistency, including virtualization, networking, and professional experience.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ Chef de projet sécurité informatique avec plus de 10 ans d’expérience en ad
   
 ### Virtualisation:
   
-* Installation et configuration d’un hyperviseur: Hyper-V, vSphere Vcenter et Proxmox.
-* Configuration du stockage réseau de type NAS et SAN.
+* Installation et configuration d’un hyperviseur: Hyper-V, vSphere Vcenter et Proxmox VE.
+* Configuration des baies de stockage NAS et SAN.
   
 ### Linux:
   
@@ -44,25 +44,21 @@ Chef de projet sécurité informatique avec plus de 10 ans d’expérience en ad
 ### Réseaux
 * Configuration des réseaux LAN, WAN.
 * Configuration et dépannage des protocoles réseaux.
-* Configuration routeurs et switches L2 et L3.
-* Configuration et administration des pare-feux.
+* Configuration routeurs et commutateurs.
+* Configuration et administration des pare-feux et VPN.
 
 ## Expérience professionnelle:
   
 #### SOGRAL EPE/SPA (Chef de projet sécurité informatique, 03/2023 à ce jour)
 * Gestion des sauvegardes des serveurs avec VEEAM Backup and Replication.
-* Configuration des pares-feu FORTIGATE.
-* Configuration et administration des serveurs web et proxy.
-* Installation et configuration de la solution anti-virus ESET Endpoint Security.
-* Installation et configuration d’une baie de stockage HPE MSA2062.
+* Configuration et administration des pares-feux.
+* Configuration et administration des serveurs.
+* Installation et configuration de la solution ESET Endpoint Security.
+* Installation et configuration des baies de stockage.
 
 #### SOGRAL EPE/SPA (Administrateur système & réseaux, 10/2018 à 03/2023)
-* Administration du domaine Windows Server : active directory, GPO.
-* Administration de l’hyperviseur vCenter / ESXI et des machines virtuelles.
-* Mise en place d’un serveur FTP : ProFTPD
-* Mise en place d’une plateforme de monitoring et d’alerting : Zabbix.
-* Mise en place d’un serveur centralisé des logs : Graylog.
-* Mis en place d’un serveur de ticketing/IT Assets Management : GLPI
+* Administration du domaine Windows Server : active directory, GPO, Serveurs de fichiers etc
+* Administration de vCenter et des machines virtuelles.
 * Formation des nouveaux recrues
 * IT support niveau 2.
   
@@ -74,10 +70,11 @@ Chef de projet sécurité informatique avec plus de 10 ans d’expérience en ad
 #### INSFP Beaulieu (Agent administratif, 01/2007 à 12/2012)
 
   
-## Projets
+## Projets techniques marquants
   
 * Migration de VMware vCenter vers Proxmox VE (en cours) 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
+* Implémentation d'un réseau virtuel privé (VPN) Fortigate
 * Implémentation d’un serveur de ticketing et d’inventaire d'équipements IT (GLPI)
 * Déploiement d’un serveur de monitoring de l’infrastruction IT (Zabbix + Grafana)
 * Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
