Revise profile and skills descriptions in index.html
Updated the professional profile and skills sections to provide a more detailed overview of experience and competencies in IT security, virtualization, and system administration.

--- a/index.html
+++ b/index.html
@@ -21,31 +21,34 @@
 # BOUSMINA Lazhar <br> (Administrateur système)
 
 ## Profil
-Chef de projet sécurité informatique avec plus de 10 ans d’expérience en administration systèmes, réseaux et virtualisation. Spécialisé dans la sécurisation des infrastructures IT, la gestion de projets techniques et la mise en œuvre de solutions VMware et Fortinet.
-
+Chef de projet sécurité informatique et administrateur systèmes expérimenté, doté de plus de dix ans d’expérience dans la conception, la mise en œuvre et la sécurisation d’infrastructures IT. Compétent en virtualisation (Hyper-v, VMware, Proxmox), sauvegarde (Veeam), sécurité réseau (FortiGate), et supervision (Zabbix, Grafana, ELK). Leadership technique, sens du service et forte culture de la sécurité au service de la continuité opérationnelle.
 ## Compétences Techniques
   
 ### Windows
   
-* Mise en place, administration et maintenance d’une infrastructure Active Directory dans des environnements Windows Server (2008 à 2025)
-+ Mise en place d’un serveur de deploiement Windows
-* Gestion des Contrôleur de domaine, Serveurs
-* Configuration d’un cluster de basculement Windows
+* Administration et maintenance d’infrastructures Active Directory sous Windows Server (2008 → 2025)
+* Gestion des contrôleurs de domaine, serveurs de fichiers et GPO
+* Mise en place d’un serveur de déploiement automatisé (WDS)
+* Configuration et supervision de clusters de basculement Windows
   
-### Virtualisation:
-  
-* Installation et configuration d’un hyperviseur: Hyper-V, vSphere Vcenter et Proxmox VE.
-* Configuration des baies de stockage NAS et SAN.
+### Virtualisation & Stockage
+
+* Installation et configuration d’hyperviseurs : VMware, Hyper-V, Proxmox VE
+* Gestion et administration des baies de stockage NAS et SAN
+* Création et maintenance de clusters de virtualisation
   
 ### Linux:
   
-* Installation, administration des serveurs Linux : Redhat et Debian
+* Installation, configuration et administration des serveurs Red Hat Enterprise Linux et Debian
+* Gestion des services réseaux et automatisation de tâches système
   
-### Réseaux
-* Configuration des réseaux LAN, WAN.
-* Configuration et dépannage des protocoles réseaux.
-* Configuration routeurs et commutateurs.
-* Configuration et administration des pare-feux et VPN.
+### Sauvegarde, Monitoring & Automatisation
+
+* Veeam Backup & Replication : planification, sauvegarde, restauration et supervision
+* Zabbix, Grafana : surveillance et alerting des infrastructures
+* Graylog : centralisation et analyse des logs systèmes et réseau
+* GLPI : gestion des tickets et inventaire des actifs IT
+* Automatisation et scripts : Bash, PowerShell
 
 ## Expérience professionnelle:
   
