Revise profile description in index.html
Updated professional profile description to emphasize expertise in systems and network administration, virtualization, and cybersecurity.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 # BOUSMINA Lazhar <br> (Administrateur système)
 
 ## Profil
-Chef de projet sécurité informatique et administrateur systèmes expérimenté, doté de plus de dix ans d’expérience dans la conception, la mise en œuvre et la sécurisation d’infrastructures IT. Compétent en virtualisation (Hyper-v, VMware, Proxmox), sauvegarde (Veeam), sécurité réseau (FortiGate), et supervision (Zabbix, Grafana, ELK). Leadership technique, sens du service et forte culture de la sécurité au service de la continuité opérationnelle.
+Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégration, la virtualisation et la sécurisation d’environnements Windows, Linux et VMware. Solide expérience en gestion de clusters, supervision (Zabbix, Grafana), sauvegarde (Veeam), et administration réseau (FortiGate, VLAN, VPN). Passionné par la fiabilité des infrastructures, la cybersécurité et l’automatisation, avec une approche proactive du maintien en conditions opérationnelles.
+
 ## Compétences Techniques
   
 ### Windows
