Revise project and personal qualities sections in index.html
Updated project details and personal qualities sections in index.html. Changed the VPN implementation description and adjusted availability duration.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 
   
 ## Projets techniques marquants
-  
 * Migration de VMware vCenter vers Proxmox VE (en cours) 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
-* Implémentation d'un réseau virtuel privé (VPN) Fortigate
+* Implémentation d'un réseau virtuel privé (Fortigate)
 * Implémentation d’un serveur de ticketing et d’inventaire d'équipements IT (GLPI)
 * Déploiement d’un serveur de monitoring de l’infrastruction IT (Zabbix + Grafana)
 * Mise en place d’un serveur centralisé de collecte et d’analyse des logs des équipements réseau et des serveurs (Graylog)
@@ -86,10 +85,9 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 * Mise en place d’un reverse proxy en mode terminaison TLS (HAProxy)
 * Installation et administration d’une plateforme de réservation en ligne (MAHATATI)  
 * Configuration d'un cluster de serveurs de virtualisation (vCenter)
-* Mise en place d'un serveur DHCP et configuration VLANs
+* Mise en place d'un serveur DHCP et configuration VLANs (Fortigate)
   
-## Diplômes et formations
-
+## Formations & Certifications
 * Formation RSSI : Maîtriser et incarner les fonctions SSI, UNIDEES (05/2023)
 * CompTIA Storage+ (12/2021)
 * CompTIA Security+ SYO-501 (12/2020)
@@ -102,7 +100,15 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 * Administration RedHat Entreprise Linux 5 (2009)
 * Diplôme TS en informatique, option bases de données (09/2015)
 
-## Misc. Information
+##  Qualités personnelles
+* Apprentissage rapide et autonome
+* Capacité à gérer, encadrer et superviser des équipes techniques
+* Excellentes compétences en communication et esprit collaboratif
+* Esprit logique, analytique et synthétique
+* Sens aigu des responsabilités et de l’organisation
+* Curiosité et passion pour les nouvelles technologies
+* Mobilité géographique et disponibilité pour les déplacements
 
+## Informations complémentaires
 * Langues: Anglais (bon), Français (bon), Arabe (bon)
-* Disponibilité: 1 mois
+* Disponibilité: 2 mois
