Update availability note in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 
 #### INSFP Beaulieu (Agent administratif, 01/2007 à 12/2012)
 
-  
 ## Projets techniques marquants
 * Migration de VMware vCenter vers Proxmox VE (en cours) 
 * Mise en place d'une plateforme d'hébéregement de fichiers et collaboration (Nextcloud)  
@@ -107,4 +106,4 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 
 ## Informations complémentaires
 * Langues: Anglais (bon), Français (bon), Arabe (bon)
-* Disponibilité: 2 mois
+* Disponibilité: 2 mois max
