--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 * Diplôme TS en informatique, option bases de données (09/2015)
 
 ##  Qualités personnelles
-* Apprentissage rapide et autonome
-* Capacité à gérer, encadrer et superviser des équipes techniques
-* Excellentes compétences en communication et esprit collaboratif
-* Esprit logique, analytique et synthétique
-* Sens aigu des responsabilités et de l’organisation
-* Curiosité et passion pour les nouvelles technologies
-* Mobilité géographique et disponibilité pour les déplacements
+* Capacité à assimiler de nouvelles connaissances et compétences de manière proactive et efficace.
+* Excellentes aptitudes relationnelles, favorisant un travail d’équipe harmonieux et productif.
+* Approche logique et structurée pour résoudre des problèmes complexes et proposer des solutions pertinentes.
+* Rigueur, fiabilité et forte implication dans l’atteinte des objectifs.
+* Curiosité naturelle et passion pour les innovations et les nouvelles technologies.
+* Disponible pour des déplacements professionnels et apte à s’adapter à différents environnements de travail.
 
 ## Informations complémentaires
-* Langues: Anglais (bon), Français (bon), Arabe (bon)
+* Langues: Anglais (bon), Français (bon), Arabe (moyen)
 * Disponibilité: 2 mois max
