--- a/index.html
+++ b/index.html
@@ -105,4 +105,4 @@ Administrateur systèmes et réseaux confirmé, spécialisé dans l’intégrati
 
 ## Informations complémentaires
 * Langues: Anglais (bon), Français (bon), Arabe (moyen)
-* Disponibilité: 2 mois max
+* Disponibilité: au plus tard 2 mois
